mainly few changes in todo files

--- a/todo
+++ b/todo
@@ -1,5 +1,6 @@
 #!/bin/bash
-
+echo "" >> ~/todo.mk
+echo "########################################" >> ~/todo.mk
 date >> ~/todo.mk
 echo "" >> ~/todo.mk
 echo "TODO:" >> ~/todo.mk
